# Treakeaze

./: .gitignore  DUPLICATE_PREVENTION.md  check_duplicate_papers.py  create_superuser.py  fix_db.py  fix_migration_duplicates.py  mermaid.md  pyproject.toml  requirements.txt
accounts/: utils.py  views.py
conference/: admin.py  forms.py  models.py  views.py
conference/migrations/: 0033_add_invitee_name_and_make_subreviewer_nullable.py  0034_alter_paper_paper_id_and_more.py  0035_alter_paper_status.py
conference_mgmt/: settings.py
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: manage_submission.html
papersetu2-main/papersetu2-main/: requirements.txt  urls.py
papersetu2-main/papersetu2-main/accounts/: views.py
papersetu2-main/papersetu2-main/conference/: admin.py  models.py  views.py
templates/: 404.html  500.html  homepage.html  landing.html  news.html  quick_start_guide.html
templates/accounts/: password_reset_email.html  register.html  verify_otp.html
templates/conference/: author_dashboard.html  browse_conferences.html  conferences_list.html  create_conference.html  reviewer_volunteer.html  submit_paper.html  subreviewer_review_form.html
templates/dashboard/: Trekeaze_placeholder.html  add_review.html  authors_list.html  conference_created.html  conference_submissions.html  delete_submissions.html  manage_submission.html  publish_with_us.html  registration_application_step1.html  registration_application_step2.html  review_paper.html  subreviewers.html  update_review.html  view_submission_details.html
(+29 files in other folders)
